--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
-build/
-CMakeFiles/
-CMakeCache.txt
-cmake_install.cmake
-Makefile
-Testing/
-CTestTestfile.cmake
-
-*.o
+/build/
+/external/googletest/build/
+/*.exe
 *.obj
+*.o
 *.a
 *.lib
-*.exe
 *.dll
-
+*.pdb
 .vscode/
